added comparison in application

--- a/manuscript/Manuscript.tex
+++ b/manuscript/Manuscript.tex
@@ -55,7 +55,8 @@ Existing methods for predicting housing prices often rely on traditional statist
 % Existing works
 % Why are existing methods not sufficient? What are the elements of an attractive solution?
 % Contributions
-The main contribution of this paper is to corroborate the findings of prior research papers on this topic.
+
+The primary significance of this paper lies in its contribution to the existing body of knowledge on the specified topic. By corroborating the findings of prior research papers, this study aims to reinforce and validate the existing literature, thereby enhancing the robustness and reliability of the overall understanding of the field. Emphasize the specific aspects or insights where this paper aligns with or extends the conclusions drawn in previous research. In the final stages of our analysis, a crucial component involves a rigorous comparison between the model developed in this paper and the results available on \href{https://www.kaggle.com/code/ashydv/housing-price-prediction-linear-regression/notebook}{Kaggle}. The expected outcome is to try to produce a model that is more efficient than the one provided with the data set. By benchmarking our model against a Kaggle reference, we seek to evaluate its efficiency and effectiveness in predicting housing prices. This comparative analysis serves as a valuable validation step, allowing us to assess the model's performance in the context of real-world data and industry standards. The anticipated outcome of this comparative analysis is to identify areas of improvement and efficiency enhancement in our model when contrasted with the Kaggle benchmark. We aim not only to replicate but to surpass the predictive accuracy and performance metrics achieved by the existing Kaggle model. 
 
 % A roadmap
 The rest of the paper is organized in the following way. Beginning with the overall introduction located in Section~\ref{sec:intro}. A brief introduction about the data will be shown in Section~\ref{sec:data}. Here, the variables will be described and explained how they contribute to the research question. Then, the methodology used in this paper will be explained in Section~\ref{sec:meth}. The applications of the results found will be in Section~\ref{sec:app}. This section will present the results from the model and have further analysis with tables and figures. More in-depth analysis of how the results can be applied to the real world will be in this section. Finally, the discussion part for this paper will be in Section~\ref{sec:disc}. The limitations of the current study and future direction will be discussed here.
@@ -165,7 +166,9 @@ Equation~\ref{eq:R2} is the formula for R-squared. R-squared is a measure of the
 \end{figure}
 Figure~\ref{fig:regression_plot} shows a linear regression plot with the predicted house price against the actual house price. Based on this plot that was created, it looks like the model was somewhat accurate in predicting the prices. 
 
-The calculated R-squared value for the model was 0.6529. An R-squared value of 0.6529 indicates the proportion of the variance in the dependent variable that can be explained by the independent variables in a multiple linear regression model. In other terms, about 65.29\% of the variability in the observed data can be accounted for by the model. 
+The calculated R-squared value for the model produced in this paper was 0.6529. A R-squared value of 0.6529 indicates the proportion of the variance in the dependent variable that can be explained by the independent variables in a multiple linear regression model. In other terms, about 65.29\% of the variability in the observed data can be accounted for by the model. The remaining 34.71\% of the variance is unaccounted for and may be attributed to other factors not included in your model or to random variability.
+
+In comparison with the model produced in \href{https://www.kaggle.com/code/ashydv/housing-price-prediction-linear-regression/notebook}{Kaggle}, it is slightly better. The Kaggle model had a R-squared value of 0.5791. A R-squared value of 0.5791 suggests that approximately 57.91\% of the variance in the dependent variable can be explained by the independent variables in your regression model. The model that was produced in the paper has a better R-squared value of about 7.38\%. 
 
 \section{Discussion and Conclusion}
 \label{sec:disc}
