change discussion part

--- a/manuscript/Manuscript.tex
+++ b/manuscript/Manuscript.tex
@@ -174,12 +174,18 @@ In comparison with the model produced in \href{https://www.kaggle.com/code/ashyd
 \label{sec:disc}
 
 % A summary, again, of the contributions of the research.
+In summary, this paper makes a substantial contribution to the existing body of knowledge within the specified research domain by reinforcing and validating findings from prior research. The study emphasizes specific aspects where it aligns with or extends conclusions drawn in earlier works. In the final stages of analysis, a rigorous comparison with a Kaggle reference is undertaken, with the aim of surpassing the predictive accuracy of the existing model. This comparative analysis serves as a crucial validation step, providing insights into potential areas for improvement and efficiency enhancement. The paper aspires to advance predictive modeling in housing price prediction beyond current benchmarks, contributing to the evolving landscape of statistical methodologies in the field.
+
 % The research question posed as the `need’ of the introduction must be answered here (Zeiger 2000).
 % Limitations of the current study
 One limitation of this current study is that this data set is very small and has very limited variables. The next step for this study is to gain access to a data set from the actual house market and produce a model with it. Another factor that can limit this study is that nowadays, there are infinite numbers of factors that can affect the cost of a house. So creating a model to include all these new factors is practically impossible. 
 
 % Future directions.
-In the last decade, there have been three recessions in the United States. Being able to create a stronger model that can precisely predict the market can be more beneficial than just looking at house prices. If the model can see the fluctuation in the market, then the model can also help predict when the next recession is going to hit. 
+Over the past decade, the United States has experienced three recessions, highlighting the dynamic nature of its economic landscape. Beyond the traditional focus on housing prices, the imperative now extends to constructing a more robust predictive model with the precision to forecast overall market trends. This expanded model not only discerns fluctuations in the real estate market but also holds the potential to anticipate broader economic shifts. The ultimate goal is to transcend the confines of predicting housing prices alone and, instead, develop a tool that can provide insights into the timing and indicators of future recessions. In this way, the enhanced model becomes a strategic asset for decision-makers navigating the intricacies of economic cycles.
+
+The logical progression for advancing this study involves a strategic expansion of the data set, with a particular focus on capturing a more extensive and diverse range of housing market dynamics. The envisioned next step entails acquiring a larger data set, extending beyond the current scope, and delving into various communities across the United States. Recognizing the inherent socioeconomic variations among different communities, particularly disparities in income brackets, opens up an opportunity for analysis and model refinement.
+
+By systematically gathering data from distinct communities, each characterized by its unique economic landscape, we can aim to create a more comprehensive and representative data set. This approach can enable new researchers to examine how local economic factors and community-specific variables contribute to variations in housing prices. The inherent diversity in income levels and economic conditions across communities provides a rich terrain for exploration. This multifaceted analysis can uncover insights into the nuanced relationships between socioeconomic factors, geographical location, and housing market dynamics. It may unveil community-specific variables that exert significant influence on housing prices, contributing to a more accurate and contextually sensitive predictive model.
 
 
 % Every reference cited in the paper should appear here.
