--- a/manuscript/Manuscript.tex
+++ b/manuscript/Manuscript.tex
@@ -27,7 +27,7 @@ style=alphabetic,
 \doublespace
 
 \begin{abstract}
-With the housing market fluctuating every year, many real estate owners and businesses face a problem with gaining an accurate representation of the future of the housing market. Lots of people do not know much about the market, so they will go to real estate owners or businesses to learn more about the market. And then see what the market is at and if it is the right time to buy a house. If real estate owners and businesses are able to gain more accuracy in predicting the housing market, they will be able to help more people and possibly gain more business. Not only can this benefit the consumers, the builders are able to move with the market and have a better understanding of it. This paper aims to construct a robust linear regression model by using machine learning techniques to predict housing costs accurately. By leveraging natural language processing, the linear regression model analyzes home property descriptions and extracts vital insights that significantly contribute to precise pricing predictions. This paper ends with an explanation of the limitations of this study and potential future works that can be done.
+With the housing market fluctuating every year, many real estate owners and businesses face a problem with gaining an accurate representation of the future of the housing market. Lots of people do not know much about the market, so they will go to real estate owners or businesses to learn more about the market. And then see what the market is at and if it is the right time to buy a house. If real estate owners and businesses are able to gain more accuracy in predicting the housing market, they will be able to help more people and possibly gain more business. Not only can this benefit the consumers, the builders are able to move with the market and have a better understanding of it. This paper aims to construct a multiple linear regression model by using machine learning techniques to predict housing costs accurately. This paper ends with an explanation of the limitations of this study and potential future works.
 
 \bigskip
 \noindent{\sc Keywords}:
@@ -59,7 +59,7 @@ Existing methods for predicting housing prices often rely on traditional statist
 The primary significance of this paper lies in its contribution to the existing body of knowledge on the specified topic. By corroborating the findings of prior research papers, this study aims to reinforce and validate the existing literature, thereby enhancing the robustness and reliability of the overall understanding of the field. Emphasize the specific aspects or insights where this paper aligns with or extends the conclusions drawn in previous research. In the final stages of our analysis, a crucial component involves a rigorous comparison between the model developed in this paper and the results available on \href{https://www.kaggle.com/code/ashydv/housing-price-prediction-linear-regression/notebook}{Kaggle}. The expected outcome is to try to produce a model that is more efficient than the one provided with the data set. By benchmarking our model against a Kaggle reference, we seek to evaluate its efficiency and effectiveness in predicting housing prices. This comparative analysis serves as a valuable validation step, allowing us to assess the model's performance in the context of real-world data and industry standards. The anticipated outcome of this comparative analysis is to identify areas of improvement and efficiency enhancement in our model when contrasted with the Kaggle benchmark. We aim not only to replicate but to surpass the predictive accuracy and performance metrics achieved by the existing Kaggle model. 
 
 % A roadmap
-The rest of the paper is organized in the following way. Beginning with the overall introduction located in Section~\ref{sec:intro}. A brief introduction about the data will be shown in Section~\ref{sec:data}. Here, the variables will be described and explained how they contribute to the research question. Then, the methodology used in this paper will be explained in Section~\ref{sec:meth}. The applications of the results found will be in Section~\ref{sec:app}. This section will present the results from the model and have further analysis with tables and figures. More in-depth analysis of how the results can be applied to the real world will be in this section. Finally, the discussion part for this paper will be in Section~\ref{sec:disc}. The limitations of the current study and future direction will be discussed here.
+The structural framework of this paper unfolds in a systematic progression, commencing with the overarching introduction encapsulated in Section~\ref{sec:intro}. Moving seamlessly, Section~\ref{sec:data} offers a concise yet insightful introduction to the dataset, intricately delving into the variables at play. This section not only outlines the variables but also expounds on their individual contributions to addressing the core research question. Then, the methodology used in this paper will be explained in Section~\ref{sec:meth}. The applications of the results found will be in Section~\ref{sec:app}. This section will present the results from the model and have further analysis with tables and figures. More in-depth analysis of how the results can be applied to the real world will be in this section. Finally, the discussion part for this paper will be in Section~\ref{sec:disc}. This final section navigates through the limitations inherent in the current study, providing a transparent acknowledgment of its boundaries. Simultaneously, it paves the way for future directions, offering a roadmap for subsequent research endeavors. 
 
 
 
@@ -73,10 +73,10 @@ The rest of the paper is organized in the following way. Beginning with the over
 % What exploratory analyses are done (descriptives, visualization, etc.)?
 
 The data that will be used for this study was sourced from \href{https://www.kaggle.com/code/ashydv/housing-price-prediction-linear-regression/input}{Kaggle}. It is a data set that contains \(n = 545\) observations (different house samples) of thirteen variables, seven of which are categorical variables and six are numerical variables. The data set contains features and corresponding labels for training and testing a Multiple Linear Regression (MLR) model to predict the house cost.
-The data was explored and visualized using the pandas library in Python. For the columns that were strings, they have been transformed into an integer data type so that they can be read in the model. More specifically, the 'furnishingstatus' column was broken down into three different columns. One for furnished, one for semi-furnished, and lastly one for unfurnished. 
+To prepare the data for modeling, the pandas library in Python was employed for exploration and visualization. For the columns that were strings, they have been transformed into an integer data type so that they can be read in the model. More specifically, the 'furnishingstatus' column was broken down into three different columns. One for furnished, one for semi-furnished, and lastly one for unfurnished. 
 
 
-\begin{table}
+\begin{table}[h!]
 \caption{Data Description}
   \label{tab:rv}
 \begin{tabular}{llll}
